# IP-Sentinel

./: .gitignore  Makefile  README.md  pyproject.toml  version.txt
.github/workflows/: daily_keywords.yml  ua_factory.yml
core/: cron_task.sh  install.sh  uninstall.sh
data/: map.json  user_agents.txt
data/keywords/: kw_AE.txt  kw_AU.txt  kw_BD.txt  kw_CA.txt  kw_DE.txt  kw_ES.txt  kw_FR.txt  kw_HK.txt  kw_ID.txt  kw_IN.txt  kw_JP.txt  kw_KH.txt  kw_KR.txt  kw_LA.txt  kw_MM.txt  kw_MN.txt  kw_MO.txt  kw_MY.txt  kw_NG.txt  kw_NL.txt  kw_NP.txt  kw_PH.txt  kw_SA.txt  kw_SG.txt  kw_TH.txt  kw_TR.txt  kw_TW.txt  kw_UK.txt  kw_US.txt  kw_VN.txt
data/regions/AE/Default/: Dubai.json
data/regions/AU/NSW/: Sydney.json
data/regions/AU/QLD/: Brisbane.json
data/regions/AU/SA/: Adelaide.json
data/regions/AU/VIC/: Melbourne.json
data/regions/AU/WA/: Perth.json
master/: install_master.sh  uninstall_master.sh
py/: __init__.py  agent_commands.py  agent_daemon.py  agent_spawn.py  agent_ws.py  config.py  geo_probe.py  ip_quality_probe.py  log_util.py  maps_browser.py  master_public_ip.py  master_wss_resolve.py  mod_google.py  mod_quality.py  mod_trust.py  network.py  persona.py  report.py  run_master.py  runner.py  scheduler.py  session_stats.py  task_lock.py  tg_util.py  updater.py  webhook.py  ws_protocol.py  wss_constants.py  xykt_runner.py
py/master/: __init__.py  __main__.py  agent_client.py  bot.py  config.py  db.py  flags.py  fleet_report.py  forum_topics.py  handlers.py  security.py  telegram_api.py  ws_server.py
scripts/: fetch_trust_urls.py
(+55 files in other folders)
